--- a/node/package.json
+++ b/node/package.json
@@ -4,11 +4,18 @@
   "description": "reading and writing data to redis with javascript",
   "main": "usage.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel location/ex1.js -d lib",
+    "start": "npm run build && node lib/location/ex1.js"
   },
   "author": "Michael Angerman",
   "license": "MIT",
   "dependencies": {
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "request": "^2.83.0",
+    "request-promise-native": "^1.0.5"
+  },
+  "devDependencies": {
+    "babel-cli": "*",
+    "babel-preset-env": "*"
   }
 }
